# industrial-digital-polygon-simulator-apigetway

./: .dockerignore  .gitignore  Dockerfile  README(vs).md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
application/: main.py
application/api/: auth_endpoints.py  dependency.py  router.py
application/api/auth/: endpoints.py
application/config/: __init__.py  env_config.py  logger_config.py
application/core/: config.py  security.py
application/models/: invitation.py  room.py  user.py
application/services/: auth_service.py
config/: __init__.py  env_config.py
tests/: conftest.py  test_smoke.py
